# NeuralRadianceCaching

./: .gitignore  CMakeLists.txt  LICENSE
BenchmarkApplet/: AppConfigureBench.py  configs.csv
data/shader/draw_tex2D/: draw_tex2D.frag
data/shader/include/: common.glsl  dir_gen.glsl  extensions.glsl  mc-constants.glsl  mc-descriptors.glsl  mrhe.glsl  nn.glsl  nrc-constants.glsl  nrc-descriptors.glsl  nvnn.glsl  path_trace.glsl  random.glsl  restir-descriptors.glsl  volume.glsl
data/shader/matmul/: matmul.comp
data/shader/mc/: render.comp
data/shader/mrhe-step/: mrhe-step.comp
data/shader/nrc/: backprop.comp  backprop.comp.spv  clear.comp  filter_rays.comp  filter_rays.comp.spv  forward.comp  gen_rays.comp  gen_rays.comp.spv  gradient_step.comp  gradient_step.comp.spv  prep_infer_rays.comp  prep_ray_info.comp  prep_ray_info.comp.spv  prep_train_rays.comp  prep_train_rays.comp.spv  render.comp  render.comp.spv
data/shader/nrc-forward/: nrc-forward.frag  nrc-forward.vert
data/shader/nrc-old/nrc-forward/: nrc-forward.vert
data/shader/nrc-old/nrc-step/: nrc-step.comp  nrc-step.comp.spv
data/shader/nrc-step/: nrc-step.comp
data/shader/nrc-train/: nrc-train.comp
data/shader/path-tracer/: path-tracer.frag  path-tracer.vert
data/shader/ref/: cmp.comp
data/shader/restir/: local_init.comp  render.comp  render.comp.spv  spatial_reuse.comp  temporal_reuse.comp
include/engine/: AppConfig.hpp  Camera.hpp  HpmScene.hpp  VulkanAPI.hpp  Window.hpp  common.hpp  read_file.hpp
include/engine/compute/: Matmul.hpp  Matrix.hpp  Tensor.hpp  Vector.hpp
include/engine/graphics/: Camera.hpp  DirLight.hpp  HdrEnvMap.hpp  MRHE.hpp  NeuralRadianceCache.hpp  PointLight.hpp  Reference.hpp  Sun.hpp  VolumeData.hpp  VolumeReservoir.hpp  VulkanAPI.hpp  Window.hpp  common.hpp
include/engine/graphics/renderer/: DensityPathTracer.hpp  ImGuiRenderer.hpp  McHpmRenderer.hpp  NrcHpmRenderer.hpp  OldNrcHpmRenderer.hpp  RestirHpmRenderer.hpp
include/engine/graphics/vulkan/: Buffer.hpp  CommandPool.hpp  CommandRecorder.hpp  ComputePipeline.hpp  Instance.hpp  Shader.hpp  Swapchain.hpp  Texture2D.hpp  Texture3D.hpp
include/engine/objects/: VolumeData.hpp
include/engine/renderer/: DensityPathTracer.hpp  ImGuiRenderer.hpp
include/engine/util/: Input.hpp  Log.hpp  Time.hpp  compile_shader.hpp  keycode.hpp  mousecode.hpp  openexr_helper.hpp  read_file.hpp
include/engine/vulkan/: Buffer.hpp  CommandPool.hpp  CommandRecorder.hpp  ComputePipeline.hpp  Shader.hpp  Stepchain.hpp  Swapchain.hpp  Texture2D.hpp  Texture3D.hpp
src/: AppConfig.cpp  Buffer.cpp  Camera.cpp  CommandPool.cpp  CommandRecorder.cpp  ComputePipeline.cpp  DensityPathTracer.cpp  DirLight.cpp  HdrEnvMap.cpp  HpmScene.cpp  ImGuiRenderer.cpp  Input.cpp  Instance.cpp  Log.cpp  MRHE.cpp  Matmul.cpp  Matrix.cpp  McHpmRenderer.cpp  NeuralRadianceCache.cpp  NeuralRadianceCache.cu  NrcHpmRenderer.cpp  NrcHpmRenderer.cu  OldNrcHpmRenderer.cpp  PointLight.cpp  Reference.cpp  RestirHpmRenderer.cpp  Shader.cpp  Sun.cpp  Swapchain.cpp  Tensor.cpp  Texture2D.cpp  Texture3D.cpp  Time.cpp  Vector.cpp  VolumeData.cpp  VolumeReservoir.cpp  VulkanAPI.cpp  VulkanAPI.cu  Window.cpp  compile_shader.cpp  (+4 more)
